[package]
name = "pxe"
version = "0.1.0"
authors = ["Artur Kowalski <arturkow2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http"]
http = ["hyper"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "io-util"] }
clap = { git = "https://github.com/clap-rs/clap" }
tokio-util = { version = "0.6", features = ["net", "codec"] }
tokio-stream = "0.1"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1"
anyhow = "1"
byteorder = "1"
rand = "0.8"
bytes = "1"
hyper = { version = "0.14", features = ["http1", "server", "stream", "runtime"], optional = true }
